WIP: sqlite, audio_export_kwargs, mp4 [checkpoint before overhauling rec.id]

--- a/features/environment.yml
+++ b/features/environment.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
 
 # Core python
-- python=3.6.5
+- python=3.6
 - pip==9.0.3
 
 # 3rd-party libs
@@ -12,15 +12,15 @@ dependencies:
 # - ffmpeg=3.4.1 # For pydub [XXX Use docker/brew ffmpeg so we can build with libmp3lame. TODO How to ffmpeg+libmp3lame with conda?]
 - lightgbm=2.1.2
 - matplotlib=2.1.1 # TODO How to install 2.2.x without conflicts?
-# HACK Pin ncurses=5.9 to workaround lib error with ncurses=6:
+- ncurses=5.9  # HACK Pin ncurses=5.9 to workaround lib error with ncurses=6:
 # - "ImportError: dlopen(.../readline.cpython-36m-darwin.so, 2): Library not loaded: @rpath/libncursesw.5.dylib"
-- ncurses=5.9
 - numpy=1.14.5 # Keep this up to date so that pip deps don't install a newer numpy without openblas
 - pillow=4.3.0 # pillow brings in mkl [TODO How do we want this to work?]
 - pandas=0.23.0 # Duped in pip deps
 - scikit-learn=0.19.1 # Duped in pip deps
 - scipy=1.1.0
 - sox=14.4.2 # For pydub
+- sqlite=3.24.0
 - xgboost=0.72
 
 # openblas vs. mkl
