log: Route through structlog instead of raw print + migrate callers

--- a/features/logging.conf
+++ b/features/logging.conf
@@ -15,7 +15,9 @@ keys = the_only_formatter
 
 [formatter_the_only_formatter]
 format  = %(levelname)-8s [%(asctime)s.%(msecs)03d] %(process)d/%(name)s: %(message)s
-datefmt = %Y-%m-%dT%H:%M:%S
+# TODO Add a way to switch on $BUBO_ROLE: show date for 'api', hide date for 'notebook'
+# datefmt = %Y-%m-%dT%H:%M:%S
+datefmt = %H:%M:%S
 
 # NOTE To add a new logger:
 #   1. Add to keys, here
