Overhaul rec.id / audio.name (big ugh, but it worked)

--- a/features/logging.conf
+++ b/features/logging.conf
@@ -15,12 +15,9 @@ keys = the_only_formatter
 
 [formatter_the_only_formatter]
 
-# TODO Tightly coupled to BasicRenderer in api.app -- decouple these (will require lots of slog work)
-# TODO How to get fully qualified %(module)s here instead of requiring caller to structlog.get_logger(__name__)?
-# - Can probably add a LogRecord processor somewhere in init_logging? e.g. surface a new field to format here
-# - Else `inspect` all of this info manually in BasicRenderer and reduce most of this to %(message)s
-# format = %(levelname)-8s [%(asctime)s.%(msecs)03d] %(process)d/%(name)s: %(message)s
-format = %(levelname)-8s [%(asctime)s.%(msecs)03d] %(process)d [%(name)s:%(lineno)d] %(funcName)s%(message)s
+# WARNING Even though we can %(module)s here, maintain the get_logger(__name__) idiom else we can't control log levels!
+#   - TODO Tightly coupled to BasicRenderer in api.app -- decouple these (will require lots of slog work)
+format = %(levelname)-8s [%(asctime)s.%(msecs)03d] [%(process)5d]%(lineno)4d %(name)s.%(funcName)s%(message)s
 
 # TODO Add a way to switch on $BUBO_ROLE: show date for 'api', hide date for 'notebook'
 # datefmt = %Y-%m-%dT%H:%M:%S
