--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -1,11 +1,11 @@
 # XXX This worked with `pip install`, but doesn't work with `conda env`. Have to manually `pip install -e .` instead.
 # -e /Users/danb/bubo/features
 
-# TODO TODO Reconcile local vs. github
+# TODO Reconcile local vs. github
 # -e /Users/danb/hack/potoo
 # -e /Users/danb/hack/joblib
-git+https://github.com/jdanbrown/potoo.git@a9ec743#egg=potoo
-git+https://github.com/jdanbrown/joblib.git@9f7b8b8#egg=joblib
+git+https://github.com/jdanbrown/potoo.git@421d7d0#egg=potoo
+git+https://github.com/jdanbrown/joblib.git@78fab80#egg=joblib
 
 attrdict==2.0.0
 attrs==18.1.0
@@ -38,6 +38,7 @@ line-profiler==2.1.2
 memory-profiler==0.52.0
 more-itertools==4.2.0
 nose==1.3.7 # For sklearn.utils.estimator_checks
+oyaml==0.6
 pandas==0.23.0 # Duped in conda deps; included here to prevent other deps from upgrading/downgrading it
 parse==1.8.4
 pdbpp==0.9.2
