--- a/features/logging.yaml
+++ b/features/logging.yaml
@@ -35,14 +35,9 @@ loggers:
 
 formatters:
   bubo_formatter:
-
     # TODO Decouple from api.app.{BuboRenderer,BuboFilter} [by writing a BuboFormatter]
     # - WARNING Even though we can %(module)s here, maintain the per-module get_logger() idiom else we can't control log levels!
-    format: '%(levelname)-8s [%(asctime)s.%(msecs)03d] [%(process)5d]%(lineno)4d %(name_funcName_message)s'
-
-    # TODO Add a way to switch datefmt on $BUBO_ROLE: show date for 'api', hide date for 'notebook' [write a BuboFormatter]
-    # datefmt: '%Y-%m-%dT%H:%M:%S'
-    datefmt: '%H:%M:%S'
+    format: '%(levelname)s %(timestamp)s %(process)s%(lineno)s %(name_funcName_message)s'
 
 filters:
   bubo_filter:
