api/similar: Clean up sample_r; add more view fields; add n_sp_recs

--- a/features/logging.yaml
+++ b/features/logging.yaml
@@ -11,6 +11,7 @@ root:
 loggers:
 
   # bubo
+  datasets:   {level: INFO}  # Noisy at debug
   # load:       {level: DEBUG} # Noisy
   load:       {level: INFO}  # File reads/writes
   # load:       {level: WARN}  # Quiet
