api: Add agglom clustering; responsive css for text/img size

--- a/features/environment.yml
+++ b/features/environment.yml
@@ -17,6 +17,7 @@ dependencies:
 - numpy=1.14.5 # Keep this up to date so that pip deps don't install a newer numpy without openblas
 - pillow=4.3.0 # pillow brings in mkl [TODO How do we want this to work?]
 - pandas=0.23.4 # Duped in pip deps
+# TODO QA model eval (covers train+predict) before upgrading ≥0.20.x [http://scikit-learn.org/stable/whats_new.html#version-0-20-0]
 - scikit-learn=0.19.1 # Duped in pip deps
 - scipy=1.1.0
 - sox=14.4.2 # For pydub
