--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -42,6 +42,7 @@ oyaml==0.6
 pandas==0.23.4 # Duped in conda deps; included here to prevent other deps from upgrading/downgrading it
 parse==1.8.4
 pdbpp==0.9.2
+pipdeptree==0.13.0
 git+https://github.com/has2k1/plotnine.git@db4acba#egg=plotnine
 pp-ez==0.2.0
 pprintpp==0.3.0
