app: Add react-native-audio

--- a/Birdgram/ios/Birdgram/Info.plist
+++ b/Birdgram/ios/Birdgram/Info.plist
@@ -56,5 +56,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<!-- For mic access -->
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Birdgram uses the microphone to record the bird calls you want to identify</string>
 </dict>
 </plist>
