--- a/Birdgram/android/settings.gradle
+++ b/Birdgram/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'Birdgram'
+include ':react-native-audio'
+project(':react-native-audio').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-audio/android')
 
 include ':app'
