--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.5.0",
-    "react-native": "0.57.2"
+    "react-native": "0.57.2",
+    "react-native-audio": "^4.2.1"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
