--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "rndebugger-open"
   },
   "dependencies": {
     "react": "16.5.0",
@@ -20,6 +21,7 @@
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.48.0",
     "react-addons-test-utils": "^15.6.2",
+    "react-native-debugger-open": "^0.3.17",
     "react-native-typescript-transformer": "^1.2.10",
     "react-test-renderer": "16.5.0",
     "ts-jest": "^23.10.4",
