--- a/Birdgram/android/settings.gradle
+++ b/Birdgram/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'Birdgram'
+include ':react-native-microphone-stream'
+project(':react-native-microphone-stream').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-microphone-stream/android')
 include ':react-native-audio'
 project(':react-native-audio').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-audio/android')
 
