--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -8,11 +8,19 @@
     "postinstall": "rndebugger-open"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.117",
+    "@types/ndarray": "^1.0.6",
+    "@types/react-native-permissions": "^1.1.1",
+    "fft.js": "^4.0.3",
+    "lodash": "^4.17.11",
+    "ndarray": "^1.0.18",
+    "ndarray-resample": "^1.0.1",
     "react": "16.5.0",
     "react-native": "0.57.2",
     "react-native-audio": "^4.2.1",
     "react-native-microphone-stream": "git://github.com/chadsmith/react-native-microphone-stream.git#4cca1e7",
-    "react-native-permissions": "^1.1.1"
+    "react-native-permissions": "^1.1.1",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
@@ -21,6 +29,7 @@
     "@types/react-test-renderer": "^16.0.3",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
+    "jest-runner-tsc": "^1.3.2",
     "metro-react-native-babel-preset": "0.48.0",
     "react-addons-test-utils": "^15.6.2",
     "react-native-debugger-open": "^0.3.17",
@@ -28,6 +37,9 @@
     "react-test-renderer": "16.5.0",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.1"
+  },
+  "scripts": {
+    "tsc-jest-cant-watch": "tsc && jest"
   },
   "jest": {
     "preset": "react-native",
