--- a/Birdgram/android/app/build.gradle
+++ b/Birdgram/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-keep-awake')
     compile project(':react-native-microphone-stream')
     compile project(':react-native-audio')
     implementation fileTree(dir: "libs", include: ["*.jar"])
