--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -3,24 +3,36 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
-    "postinstall": "rndebugger-open"
+    "tsc-jest-cant-watch": "tsc && jest"
   },
   "dependencies": {
+    "@types/d3-color": "^1.2.1",
+    "@types/d3-scale-chromatic": "^1.3.0",
+    "@types/jimp": "^0.2.28",
     "@types/lodash": "^4.14.117",
     "@types/ndarray": "^1.0.6",
+    "@types/numjs": "^0.14.4",
+    "@types/react-native-keep-awake": "^2.0.2",
     "@types/react-native-permissions": "^1.1.1",
+    "d3-color": "^1.2.3",
+    "d3-scale-chromatic": "^1.3.3",
     "fft.js": "^4.0.3",
+    "get-pixels": "^3.3.2",
+    "jimp": "^0.5.4",
     "lodash": "^4.17.11",
     "ndarray": "^1.0.18",
+    "ndarray-ops": "^1.2.2",
     "ndarray-resample": "^1.0.1",
+    "node-libs-react-native": "^1.0.3",
     "react": "16.5.0",
     "react-native": "0.57.2",
     "react-native-audio": "^4.2.1",
+    "react-native-keep-awake": "^3.1.0",
     "react-native-microphone-stream": "git://github.com/chadsmith/react-native-microphone-stream.git#4cca1e7",
     "react-native-permissions": "^1.1.1",
-    "tslib": "^1.9.3"
+    "save-pixels": "^2.3.4",
+    "tslib": "^1.9.3",
+    "zeros": "^1.0.0"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
@@ -37,9 +49,6 @@
     "react-test-renderer": "16.5.0",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.1"
-  },
-  "scripts": {
-    "tsc-jest-cant-watch": "tsc && jest"
   },
   "jest": {
     "preset": "react-native",
