--- a/Birdgram/android/app/build.gradle
+++ b/Birdgram/android/app/build.gradle
@@ -137,9 +137,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fast-image')
     compile project(':react-native-keep-awake')
     compile project(':react-native-microphone-stream')
-    compile project(':react-native-audio')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
