--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -26,7 +26,7 @@
     "node-libs-react-native": "^1.0.3",
     "react": "16.5.0",
     "react-native": "0.57.2",
-    "react-native-audio": "^4.2.1",
+    "react-native-fast-image": "^5.0.10",
     "react-native-keep-awake": "^3.1.0",
     "react-native-microphone-stream": "git://github.com/chadsmith/react-native-microphone-stream.git#4cca1e7",
     "react-native-permissions": "^1.1.1",
