--- a/Birdgram/android/settings.gradle
+++ b/Birdgram/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'Birdgram'
+include ':rn-fetch-blob'
+project(':rn-fetch-blob').projectDir = new File(rootProject.projectDir, '../node_modules/rn-fetch-blob/android')
 include ':react-native-fast-image'
 project(':react-native-fast-image').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fast-image/android')
 include ':react-native-keep-awake'
