--- a/Birdgram/android/app/build.gradle
+++ b/Birdgram/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
     compile project(':rn-fetch-blob')
     compile project(':react-native-fast-image')
     compile project(':react-native-keep-awake')
