--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -15,6 +15,9 @@
     "@types/numjs": "^0.14.4",
     "@types/react-native-keep-awake": "^2.0.2",
     "@types/react-native-permissions": "^1.1.1",
+    "@types/react-native-settings-list": "^1.8.1",
+    "@types/react-native-vector-icons": "^4.6.4",
+    "@types/react-navigation": "^2.0.24",
     "chance": "^1.0.16",
     "d3-color": "^1.2.3",
     "d3-scale-chromatic": "^1.3.3",
@@ -32,6 +35,9 @@
     "react-native-keep-awake": "^3.1.0",
     "react-native-microphone-stream": "git://github.com/chadsmith/react-native-microphone-stream.git#4cca1e7",
     "react-native-permissions": "^1.1.1",
+    "react-native-settings-list": "^1.8.0",
+    "react-native-vector-icons": "^6.0.2",
+    "react-navigation": "^2.18.0",
     "rn-fetch-blob": "git://github.com/jdanbrown/rn-fetch-blob.git#patch-1",
     "save-pixels": "^2.3.4",
     "tslib": "^1.9.3",
