--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -5,6 +5,11 @@
   "scripts": {
     "tsc-jest-cant-watch": "tsc && jest"
   },
+  "rnpm": {
+    "assets": [
+      "./app/assets"
+    ]
+  },
   "dependencies": {
     "@types/chance": "^1.0.1",
     "@types/d3-color": "^1.2.1",
@@ -33,6 +38,7 @@
     "react-native-microphone-stream": "git://github.com/chadsmith/react-native-microphone-stream.git#4cca1e7",
     "react-native-permissions": "^1.1.1",
     "react-native-settings-list": "^1.8.0",
+    "react-native-sqlite-storage": "^3.3.7",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.0",
     "rn-fetch-blob": "git://github.com/jdanbrown/rn-fetch-blob.git#patch-1",
@@ -50,6 +56,7 @@
     "jest-runner-tsc": "^1.3.2",
     "metro-react-native-babel-preset": "0.48.0",
     "react-addons-test-utils": "^15.6.2",
+    "react-native-asset": "^1.1.2",
     "react-native-debugger-open": "^0.3.17",
     "react-native-typescript-transformer": "^1.2.10",
     "react-test-renderer": "16.5.0",
