mobile: Basic audio playback works! (+ sqlstring + log)

--- a/Birdgram/ios/Birdgram/Info.plist
+++ b/Birdgram/ios/Birdgram/Info.plist
@@ -55,6 +55,10 @@
 	</dict>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Birdgram uses the microphone to record the bird calls you want to identify</string>
+	<key>UIBackgroundModes</key>
+	<array>
+	  <string>audio</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
