--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -11,15 +11,6 @@
     ]
   },
   "dependencies": {
-    "@types/chance": "^1.0.1",
-    "@types/d3-color": "^1.2.1",
-    "@types/d3-scale-chromatic": "^1.3.0",
-    "@types/jimp": "^0.2.28",
-    "@types/lodash": "^4.14.117",
-    "@types/ndarray": "^1.0.6",
-    "@types/numjs": "^0.14.4",
-    "@types/react-native-keep-awake": "^2.0.2",
-    "@types/react-native-permissions": "^1.1.1",
     "chance": "^1.0.16",
     "d3-color": "^1.2.3",
     "d3-scale-chromatic": "^1.3.3",
@@ -39,18 +30,29 @@
     "react-native-microphone-stream": "git://github.com/chadsmith/react-native-microphone-stream.git#4cca1e7",
     "react-native-permissions": "^1.1.1",
     "react-native-settings-list": "^1.8.0",
+    "react-native-sound": "^0.10.9",
     "react-native-sqlite-storage": "^3.3.7",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.0",
     "rn-fetch-blob": "git://github.com/jdanbrown/rn-fetch-blob.git#patch-1",
     "save-pixels": "^2.3.4",
+    "sqlstring-sqlite": "^0.1.1",
     "tslib": "^1.9.3",
     "zeros": "^1.0.0"
   },
   "devDependencies": {
+    "@types/chance": "^1.0.1",
+    "@types/d3-color": "^1.2.1",
+    "@types/d3-scale-chromatic": "^1.3.0",
     "@types/jest": "^23.3.5",
+    "@types/jimp": "^0.2.28",
+    "@types/lodash": "^4.14.117",
+    "@types/ndarray": "^1.0.6",
+    "@types/numjs": "^0.14.4",
     "@types/react": "^16.4.16",
     "@types/react-native": "^0.57.4",
+    "@types/react-native-keep-awake": "^2.0.2",
+    "@types/react-native-permissions": "^1.1.1",
     "@types/react-test-renderer": "^16.0.3",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
