--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -31,6 +31,7 @@
     "react-native-settings-list": "^1.8.0",
     "react-native-sound": "^0.10.9",
     "react-native-sqlite-storage": "^3.3.7",
+    "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.0",
     "rn-fetch-blob": "git://github.com/jdanbrown/rn-fetch-blob.git#patch-1",
@@ -52,6 +53,7 @@
     "@types/react-native-keep-awake": "^2.0.2",
     "@types/react-native-permissions": "^1.1.1",
     "@types/react-test-renderer": "^16.0.3",
+    "app-icon": "^0.6.3",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "jest-runner-tsc": "^1.3.2",
