--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -23,6 +23,7 @@
     "node-libs-react-native": "^1.0.3",
     "react": "16.5.0",
     "react-native": "0.57.2",
+    "react-native-console-time-polyfill": "^0.0.6",
     "react-native-debug-stylesheet": "^0.1.1",
     "react-native-fast-image": "^5.0.10",
     "react-native-keep-awake": "^3.1.0",
