--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -26,6 +26,7 @@
     "react-native-console-time-polyfill": "^0.0.6",
     "react-native-debug-stylesheet": "^0.1.1",
     "react-native-fast-image": "^5.0.10",
+    "react-native-gesture-handler": "^1.0.8",
     "react-native-keep-awake": "^3.1.0",
     "react-native-microphone-stream": "git://github.com/chadsmith/react-native-microphone-stream.git#4cca1e7",
     "react-native-permissions": "^1.1.1",
@@ -54,6 +55,7 @@
     "@types/react-native-keep-awake": "^2.0.2",
     "@types/react-native-permissions": "^1.1.1",
     "@types/react-test-renderer": "^16.0.3",
+    "animated.macro": "^0.0.5",
     "app-icon": "^0.6.3",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
