--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -38,6 +38,7 @@
     "react-navigation": "^2.18.0",
     "rn-fetch-blob": "git://github.com/jdanbrown/rn-fetch-blob.git#patch-1",
     "save-pixels": "^2.3.4",
+    "sprintf-js": "^1.1.1",
     "sqlstring-sqlite": "^0.1.1",
     "tslib": "^1.9.3",
     "zeros": "^1.0.0"
@@ -55,6 +56,7 @@
     "@types/react-native-keep-awake": "^2.0.2",
     "@types/react-native-permissions": "^1.1.1",
     "@types/react-test-renderer": "^16.0.3",
+    "@types/sprintf-js": "^1.1.1",
     "animated.macro": "^0.0.5",
     "app-icon": "^0.6.3",
     "babel-jest": "23.6.0",
