--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -34,6 +34,7 @@
     "react-native-settings-list": "^1.8.0",
     "react-native-sound": "^0.10.9",
     "react-native-sqlite-storage": "^3.3.7",
+    "react-native-status-bar-height": "^2.1.0",
     "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.0",
