--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -24,6 +24,7 @@
     "react": "16.5.0",
     "react-fast-compare": "^2.0.2",
     "react-native": "0.57.2",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-console-time-polyfill": "^0.0.6",
     "react-native-debug-stylesheet": "^0.1.1",
     "react-native-fast-image": "^5.0.10",
