mobile: Add package recompose (unused, but useful)

--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -39,6 +39,7 @@
     "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.0",
+    "recompose": "^0.30.0",
     "rn-fetch-blob": "git://github.com/jdanbrown/rn-fetch-blob.git#patch-1",
     "save-pixels": "^2.3.4",
     "sprintf-js": "^1.1.1",
@@ -59,6 +60,7 @@
     "@types/react-native-keep-awake": "^2.0.2",
     "@types/react-native-permissions": "^1.1.1",
     "@types/react-test-renderer": "^16.0.3",
+    "@types/recompose": "^0.27.0",
     "@types/sprintf-js": "^1.1.1",
     "animated.macro": "^0.0.5",
     "app-icon": "^0.6.3",
