--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -36,6 +36,7 @@
     "react-native-sound": "^0.10.9",
     "react-native-sqlite-storage": "^3.3.7",
     "react-native-status-bar-height": "^2.1.0",
+    "react-native-timer": "^1.3.4",
     "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.0",
