--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -45,6 +45,7 @@
     "save-pixels": "^2.3.4",
     "sprintf-js": "^1.1.1",
     "sqlstring-sqlite": "^0.1.1",
+    "string-hash": "^1.1.3",
     "tslib": "^1.9.3",
     "zeros": "^1.0.0"
   },
@@ -63,6 +64,7 @@
     "@types/react-test-renderer": "^16.0.3",
     "@types/recompose": "^0.27.0",
     "@types/sprintf-js": "^1.1.1",
+    "@types/string-hash": "^1.1.1",
     "animated.macro": "^0.0.5",
     "app-icon": "^0.6.3",
     "babel-jest": "23.6.0",
