--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -16,6 +16,7 @@
     "d3-scale-chromatic": "^1.3.3",
     "fft.js": "^4.0.3",
     "get-pixels": "^3.3.2",
+    "json-url": "^2.3.4",
     "lodash": "^4.17.11",
     "ndarray": "^1.0.18",
     "ndarray-ops": "^1.2.2",
