[wip: mobile deep link + nav; before switching react-navigation -> react-router]

--- a/Birdgram/ios/Birdgram/Info.plist
+++ b/Birdgram/ios/Birdgram/Info.plist
@@ -20,6 +20,19 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>open</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>birdgram-us</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -38,7 +51,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Birdgram uses the microphone to record the bird calls you want to identify</string>
 	<key>UIAppFonts</key>
