--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -37,10 +37,11 @@
     "react-native-sound": "^0.10.9",
     "react-native-sqlite-storage": "^3.3.7",
     "react-native-status-bar-height": "^2.1.0",
+    "react-native-tab-view": "^1.3.0",
     "react-native-timer": "^1.3.4",
     "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.0.2",
-    "react-navigation": "^2.18.0",
+    "react-router-native": "^4.3.0",
     "recompose": "^0.30.0",
     "rn-fetch-blob": "git://github.com/jdanbrown/rn-fetch-blob.git#patch-1",
     "save-pixels": "^2.3.4",
@@ -62,6 +63,7 @@
     "@types/react-native": "^0.57.4",
     "@types/react-native-keep-awake": "^2.0.2",
     "@types/react-native-permissions": "^1.1.1",
+    "@types/react-router-native": "^4.2.3",
     "@types/react-test-renderer": "^16.0.3",
     "@types/recompose": "^0.27.0",
     "@types/sprintf-js": "^1.1.1",
