mobile: Show recent searches in Recent + nav back to Search

--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -28,6 +28,7 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-console-time-polyfill": "^0.0.6",
     "react-native-debug-stylesheet": "^0.1.1",
+    "react-native-elements": "^0.19.1",
     "react-native-fast-image": "^5.0.10",
     "react-native-gesture-handler": "^1.0.8",
     "react-native-keep-awake": "^3.1.0",
@@ -61,6 +62,7 @@
     "@types/numjs": "^0.14.4",
     "@types/react": "^16.4.16",
     "@types/react-native": "^0.57.4",
+    "@types/react-native-elements": "^0.18.0",
     "@types/react-native-keep-awake": "^2.0.2",
     "@types/react-native-permissions": "^1.1.1",
     "@types/react-router-native": "^4.2.3",
