--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -16,6 +16,7 @@
     "d3-scale-chromatic": "^1.3.3",
     "fft.js": "^4.0.3",
     "get-pixels": "^3.3.2",
+    "js-yaml": "^3.12.0",
     "json-url": "^2.3.4",
     "lodash": "^4.17.11",
     "ndarray": "^1.0.18",
@@ -57,6 +58,7 @@
     "@types/d3-color": "^1.2.1",
     "@types/d3-scale-chromatic": "^1.3.0",
     "@types/jest": "^23.3.5",
+    "@types/js-yaml": "^3.11.2",
     "@types/lodash": "^4.14.117",
     "@types/ndarray": "^1.0.6",
     "@types/numjs": "^0.14.4",
