--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -51,6 +51,7 @@
     "sqlstring-sqlite": "^0.1.1",
     "string-hash": "^1.1.3",
     "tslib": "^1.9.3",
+    "wavefile": "^8.4.4",
     "zeros": "^1.0.0"
   },
   "devDependencies": {
