[wip] mobile/Record: Try react-native-audio-record

--- a/Birdgram/android/app/build.gradle
+++ b/Birdgram/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-audio-record')
     compile project(':react-native-gesture-handler')
     compile project(':rn-fetch-blob')
     compile project(':react-native-sound')
