--- a/Birdgram/ios/Birdgram/Info.plist
+++ b/Birdgram/ios/Birdgram/Info.plist
@@ -51,7 +51,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Birdgram uses the microphone to record the bird calls you want to identify</string>
 	<key>UIAppFonts</key>
