--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -27,6 +27,7 @@
     "react-fast-compare": "^2.0.2",
     "react-native": "0.57.2",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-audio-record": "^0.1.2",
     "react-native-console-time-polyfill": "^0.0.6",
     "react-native-debug-stylesheet": "^0.1.1",
     "react-native-elements": "^0.19.1",
