--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -16,6 +16,7 @@
     "d3-scale-chromatic": "^1.3.3",
     "fft.js": "^4.0.3",
     "get-pixels": "^3.3.2",
+    "humanize-plus": "^1.8.2",
     "js-yaml": "^3.12.0",
     "json-url": "^2.3.4",
     "lodash": "^4.17.11",
@@ -59,6 +60,7 @@
     "@types/chance": "^1.0.1",
     "@types/d3-color": "^1.2.1",
     "@types/d3-scale-chromatic": "^1.3.0",
+    "@types/humanize-plus": "^1.8.0",
     "@types/jest": "^23.3.5",
     "@types/js-yaml": "^3.11.2",
     "@types/lodash": "^4.14.117",
