--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -11,7 +11,9 @@
     ]
   },
   "dependencies": {
+    "base64-js": "^1.3.0",
     "chance": "^1.0.16",
+    "concat-typed-array": "^1.0.2",
     "d3-color": "^1.2.3",
     "d3-scale-chromatic": "^1.3.3",
     "fft.js": "^4.0.3",
@@ -57,6 +59,7 @@
     "zeros": "^1.0.0"
   },
   "devDependencies": {
+    "@types/base64-js": "^1.2.5",
     "@types/chance": "^1.0.1",
     "@types/d3-color": "^1.2.1",
     "@types/d3-scale-chromatic": "^1.3.0",
