[wip] mobile: Setup swift + playgrounds + cocoapods + AudioKit + react-native

--- a/Birdgram/ios/Podfile
+++ b/Birdgram/ios/Podfile
@@ -23,16 +23,18 @@ def all_pods
   pod 'AudioKit', '~> 4.5'
 end
 
+# TODO How to fix warning "contains framework ... for which the Podfile does not contain host targets"?
 target 'Bubo' do
   project 'Bubo/Bubo.xcodeproj'
   all_pods
 end
 
-target 'Birdgram' do
-  project 'Birdgram.xcodeproj'
-  all_pods
-  # # This causes warnings. Commented out for now.
-  # target 'BirdgramTests' do
-  #   inherit! :search_paths
-  # end
-end
+# XXX Consolidated in Bubo (upstream framework, so we can use playgrounds)
+# target 'Birdgram' do
+#   project 'Birdgram.xcodeproj'
+#   all_pods
+#   # # This causes warnings. Commented out for now.
+#   # target 'BirdgramTests' do
+#   #   inherit! :search_paths
+#   # end
+# end
