mobile/Record: Fix lag and unresponsiveness in long recordings (throttle render)

--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -27,6 +27,7 @@
     "ndarray-resample": "^1.0.1",
     "node-libs-react-native": "^1.0.3",
     "react": "16.5.0",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-fast-compare": "^2.0.2",
     "react-native": "0.57.2",
     "react-native-actionsheet": "^2.4.2",
@@ -70,6 +71,7 @@
     "@types/ndarray": "^1.0.6",
     "@types/numjs": "^0.14.4",
     "@types/react": "^16.4.16",
+    "@types/react-addons-shallow-compare": "^0.14.22",
     "@types/react-native": "^0.57.4",
     "@types/react-native-elements": "^0.18.0",
     "@types/react-native-keep-awake": "^2.0.2",
