--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "postinstall": "./bin/npm-postinstall",
     "tsc-jest-cant-watch": "tsc && jest"
   },
   "rnpm": {
@@ -13,6 +14,7 @@
   "dependencies": {
     "base64-js": "^1.3.0",
     "chance": "^1.0.16",
+    "cheerio-without-node-native": "^1.0.0-rc.2",
     "concat-typed-array": "^1.0.2",
     "d3-color": "^1.2.3",
     "d3-scale-chromatic": "^1.3.3",
@@ -26,6 +28,7 @@
     "ndarray-ops": "^1.2.2",
     "ndarray-resample": "^1.0.1",
     "node-libs-react-native": "^1.0.3",
+    "query-string": "^6.2.0",
     "react": "16.5.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-fast-compare": "^2.0.2",
@@ -63,6 +66,7 @@
   "devDependencies": {
     "@types/base64-js": "^1.2.5",
     "@types/chance": "^1.0.1",
+    "@types/cheerio": "^0.22.10",
     "@types/d3-color": "^1.2.1",
     "@types/d3-scale-chromatic": "^1.3.0",
     "@types/humanize-plus": "^1.8.0",
@@ -71,6 +75,7 @@
     "@types/lodash": "^4.14.117",
     "@types/ndarray": "^1.0.6",
     "@types/numjs": "^0.14.4",
+    "@types/query-string": "^6.1.1",
     "@types/react": "^16.4.16",
     "@types/react-addons-shallow-compare": "^0.14.22",
     "@types/react-native": "^0.57.4",
