--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -22,6 +22,7 @@
     "get-pixels": "^3.3.2",
     "humanize-plus": "^1.8.2",
     "js-yaml": "^3.12.0",
+    "json-stable-stringify": "^1.0.1",
     "json-url": "^2.3.4",
     "lodash": "^4.17.11",
     "ndarray": "^1.0.18",
@@ -72,6 +73,7 @@
     "@types/humanize-plus": "^1.8.0",
     "@types/jest": "^23.3.5",
     "@types/js-yaml": "^3.11.2",
+    "@types/json-stable-stringify": "^1.0.32",
     "@types/lodash": "^4.14.117",
     "@types/ndarray": "^1.0.6",
     "@types/numjs": "^0.14.4",
@@ -95,6 +97,7 @@
     "jest-runner-tsc": "^1.3.2",
     "metro-react-native-babel-preset": "0.48.0",
     "react-addons-test-utils": "^15.6.2",
+    "react-devtools": "^3.4.3",
     "react-native-asset": "^1.1.2",
     "react-native-debugger-open": "^0.3.17",
     "react-native-typescript-transformer": "^1.2.10",
