--- a/Birdgram/ios/Birdgram/Info.plist
+++ b/Birdgram/ios/Birdgram/Info.plist
@@ -51,7 +51,9 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Birdgram saves your gps location with each recording you make</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Birdgram saves your gps location with each recording you make</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Birdgram uses the microphone to record the bird calls you want to identify</string>
 	<key>UIAppFonts</key>
