--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "base64-js": "^1.3.0",
     "chance": "^1.0.16",
+    "change-case": "^3.0.2",
     "cheerio-without-node-native": "^1.0.0-rc.2",
     "concat-typed-array": "^1.0.2",
     "d3-color": "^1.2.3",
@@ -25,6 +26,8 @@
     "json-stable-stringify": "^1.0.1",
     "json-url": "^2.3.4",
     "lodash": "^4.17.11",
+    "memoize-one": "^5.0.0",
+    "moment": "^2.23.0",
     "ndarray": "^1.0.18",
     "ndarray-ops": "^1.2.2",
     "ndarray-resample": "^1.0.1",
@@ -75,6 +78,7 @@
     "@types/js-yaml": "^3.11.2",
     "@types/json-stable-stringify": "^1.0.32",
     "@types/lodash": "^4.14.117",
+    "@types/memoize-one": "^4.1.0",
     "@types/ndarray": "^1.0.6",
     "@types/numjs": "^0.14.4",
     "@types/query-string": "^6.1.1",
