--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -32,6 +32,7 @@
     "ndarray-ops": "^1.2.2",
     "ndarray-resample": "^1.0.1",
     "node-libs-react-native": "^1.0.3",
+    "qs": "^6.6.0",
     "query-string": "^6.2.0",
     "react": "16.5.0",
     "react-addons-shallow-compare": "^15.6.2",
@@ -62,6 +63,7 @@
     "sprintf-js": "^1.1.1",
     "sqlstring-sqlite": "^0.1.1",
     "string-hash": "^1.1.3",
+    "traverse": "^0.6.6",
     "tslib": "^1.9.3",
     "url-parse": "^1.4.4",
     "wavefile": "^8.4.4",
@@ -81,6 +83,7 @@
     "@types/memoize-one": "^4.1.0",
     "@types/ndarray": "^1.0.6",
     "@types/numjs": "^0.14.4",
+    "@types/qs": "^6.5.1",
     "@types/query-string": "^6.1.1",
     "@types/react": "^16.4.16",
     "@types/react-addons-shallow-compare": "^0.14.22",
@@ -93,6 +96,7 @@
     "@types/recompose": "^0.27.0",
     "@types/sprintf-js": "^1.1.1",
     "@types/string-hash": "^1.1.1",
+    "@types/traverse": "^0.6.32",
     "@types/url-parse": "^1.4.1",
     "animated.macro": "^0.0.5",
     "app-icon": "^0.6.3",
