--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -19,6 +19,7 @@
     "concat-typed-array": "^1.0.2",
     "d3-color": "^1.2.3",
     "d3-scale-chromatic": "^1.3.3",
+    "fbemitter": "^2.1.1",
     "fft.js": "^4.0.3",
     "get-pixels": "^3.3.2",
     "humanize-plus": "^1.8.2",
@@ -75,6 +76,7 @@
     "@types/cheerio": "^0.22.10",
     "@types/d3-color": "^1.2.1",
     "@types/d3-scale-chromatic": "^1.3.0",
+    "@types/fbemitter": "^2.0.32",
     "@types/humanize-plus": "^1.8.0",
     "@types/jest": "^23.3.5",
     "@types/js-yaml": "^3.11.2",
