--- a/Birdgram/android/app/build.gradle
+++ b/Birdgram/android/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: "com.android.application"
 
+// From https://github.com/luggit/react-native-config
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+
 import com.android.build.OutputFile
 
 /**
@@ -137,6 +140,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-config')
     compile project(':react-native-audio-record')
     compile project(':react-native-gesture-handler')
     compile project(':rn-fetch-blob')
