--- a/Birdgram/android/settings.gradle
+++ b/Birdgram/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'Birdgram'
+include ':react-native-config'
+project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
 include ':react-native-audio-record'
 project(':react-native-audio-record').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-audio-record/android')
 include ':react-native-gesture-handler'
