[wip] mobile/ios: Maybe have .env.* working with xcode schemes...

--- a/Birdgram/.env.shared
+++ b/Birdgram/.env.shared
@@ -2,7 +2,26 @@
 # vi: ft=sh
 
 export SCHEME_NAME="$SCHEME_NAME"
+export SCHEME_PREFIX="$SCHEME_PREFIX"
+export SCHEME_SUFFIX="$SCHEME_SUFFIX"
+export TARGET_NAME="$TARGET_NAME"
+export CONFIGURATION="$CONFIGURATION"
+export BUILD_DATE="$(date -u +%FT%T)"
+
 export APP_NAME="$SCHEME_NAME"
+export APP_BIRDGRAM="$SCHEME_PREFIX"
+export APP_REGION="$SCHEME_SUFFIX"
 export APP_NAME_LOWER="$(echo "$APP_NAME" | awk '{print tolower($0)}')"
-export BUNDLE_ID_NAME="${APP_NAME_LOWER// /-}"
-export BUNDLE_ID="app.birdgram.$BUNDLE_ID_NAME" # NOTE Required (else bin/xcode-pre-action-gen-env-file will (silently) fail)
+export APP_BIRDGRAM_LOWER="$(echo "$APP_BIRDGRAM" | awk '{print tolower($0)}')"
+export APP_REGION_LOWER="$(echo "$APP_REGION" | awk '{print tolower($0)}')"
+export APP_BUNDLE_ID_NAME="${APP_NAME_LOWER// /-}"
+export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME" # Required (for bin/xcode-pre-action-gen-env-file)
+export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME"
+
+# TODO Add this to LaunchScreen.template.xib
+# - Tried briefly and quit -- need to figure out how to add constraints to the new label
+if [ "$CONFIGURATION" -ne 'Debug' ]; then
+  export LAUNCH_SCREEN_DEBUG=""
+else
+  export LAUNCH_SCREEN_DEBUG="Built: $BUILD_DATE"
+fi
