--- a/Birdgram/ios/Birdgram.xcodeproj/xcshareddata/xcschemes/Birdgram CA-100.xcscheme
+++ b/Birdgram/ios/Birdgram.xcodeproj/xcshareddata/xcschemes/Birdgram CA-100.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "# Pre-/post-action exit status is ignored (poop)&#10;#   - https://stackoverflow.com/a/5434725/397334&#10;set -x&#10;&#10;# Pre-action output doesn&apos;t go to the build log; manually log to file&#10;#   - https://stackoverflow.com/a/42497746/397334&#10;exec &gt;/tmp/xcode-prebuild.log 2&gt;&amp;1&#10;&#10;# For https://github.com/luggit/react-native-config&#10;&quot;$SRCROOT/../bin/xcode-pre-action-gen-env-file&quot;&#10;">
+               scriptText = "&quot;$SRCROOT/../bin/xcode-pre-actions&quot;&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
