--- a/Birdgram/ios/Birdgram.xcodeproj/xcshareddata/xcschemes/Birdgram CA-3500.xcscheme
+++ b/Birdgram/ios/Birdgram.xcodeproj/xcshareddata/xcschemes/Birdgram CA-3500.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1000"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
@@ -10,7 +10,16 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "# From https://github.com/luggit/react-native-config&#10;echo &quot;.env.CA-3500&quot; &gt;/tmp/envfile&#10;">
+               scriptText = "&quot;$SRCROOT/../bin/xcode-pre-actions&quot;&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+                     BuildableName = "Birdgram.app"
+                     BlueprintName = "Birdgram"
+                     ReferencedContainer = "container:Birdgram.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
             </ActionContent>
          </ExecutionAction>
       </PreActions>
