--- a/Birdgram/android/app/src/main/AndroidManifest.xml
+++ b/Birdgram/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
   <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- For mic access -->
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- For geolocation -->
+  <uses-permission android:name="android.permission.VIBRATE"/>
 
   <application
     android:name=".MainApplication"
