mobile/ios: fastlane works! (Soooooo much better than using xcode!)

--- a/Birdgram/.env.shared
+++ b/Birdgram/.env.shared
@@ -1,19 +1,25 @@
 # Shared config env (see bin/xcode-pre-action-gen-env-file)
 # vi: ft=sh
 
+# Include secrets
+source "$BIRDGRAM_DIR"/.env.secret
+
 # Version and build
 # - version must increment on each release
 # - (version, build) must increment on each upload
 # - https://stackoverflow.com/a/38009895
 export APP_VERSION='0.0.1' # Bump to release
-export APP_VERSION_BUILD="`"$BIRDGRAM_BIN"/xcode-build-env-gen-app-version-build`"
+export APP_VERSION_BUILD="$("$BIRDGRAM_DIR"/bin/xcode-build-env-gen-app-version-build)"
 
+# Recompute SCHEME_PREFIX/SCHEME_SUFFIX so we can more easily be called outside of bin/xcode-build-env-from-scheme
+# - TODO Dedupe with bin/xcode-build-env-from-scheme
 export SCHEME_NAME="$SCHEME_NAME"
-export SCHEME_PREFIX="$SCHEME_PREFIX"
-export SCHEME_SUFFIX="$SCHEME_SUFFIX"
+export SCHEME_PREFIX="$(echo "$SCHEME_NAME" | cut -d' ' -f1)"
+export SCHEME_SUFFIX="$(echo "$SCHEME_NAME" | cut -d' ' -f2-)"
 export TARGET_NAME="$TARGET_NAME"
 export CONFIGURATION="$CONFIGURATION"
 export BUILD_DATE="$(date -u +%FT%T)"
+export WORKSPACE="$SCHEME_PREFIX.xcworkspace"
 
 export APP_NAME="$SCHEME_NAME"
 export APP_BIRDGRAM="$SCHEME_PREFIX"
@@ -27,7 +33,7 @@ export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME"
 
 # TODO Add this to LaunchScreen.template.xib
 # - Tried briefly and quit [wip: can add new subtitle label below title label, but then how to add positioning constraints?]
-if [ "$CONFIGURATION" -ne 'Debug' ]; then
+if [ "$CONFIGURATION" != 'Debug' ]; then
   export LAUNCH_SCREEN_DEBUG=""
 else
   export LAUNCH_SCREEN_DEBUG="Built: $BUILD_DATE"
